@@ -1,3 +1,12 @@
+2001-11-17 Alexander Rawass <alexannika@users.sourceforge.net>
+	
+	* modified vegastrike.h to have SIMULATION_ATOM as a define
+	  that uses the float simulation_atom_var
+	* modified vs_path.cpp to init simulation_atom_var with
+	  'simulation_atom' from the config file
+	* added simulation_atom in section general to the config file
+	
+
 2001-11-16 Alexander Rawass <alexannika@users.sourceforge.net>
 
 	* uncommented AC_LANG_CPLUSPLUS in configure.in
